classe principal criada

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meus objetivos</title>
+</head>
+<body>
+    <section class="conteudo-principal"></section>
+    <h2 class="titulo-principal">Meus objetivos_</h2>
+    <div class="botoes">
+        <button class="botao">Cursos na Alura</button>
+    </div>
+</body>
+</html>
