--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus objetivos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="conteudo-principal"></section>
     <h2 class="titulo-principal">Meus objetivos_</h2>
     <div class="botoes">
         <button class="botao">Cursos na Alura</button>
+        <button class="botao">Criar projetos em JavaScript</button>
+        <button class="botao">Criar um portfolio</button>
+        <button class="botao">Atualizar meu curriculo</button>
     </div>
 </body>
 </html>
