--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="conteudo-principal"></section>
-    <h2 class="titulo-principal">Meus objetivos_</h2>
+    <h2 class="titulo-principal">Meus objetivos<span>_</span></h2>
     <div class="botoes">
         <button class="botao">Cursos na Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
