--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         <button class="botao ativo">Atualizar meu curriculo</button>
     </div>
     </section>
+    <div class="abas-textos">
+    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    <div class="abas-textos">
+        <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        <div class="abas-textos">
+            <h3 class="aba-conteudo-titulo-principal">Criar um portfólio com os meus 3 melhores projetos</h3>
+            <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o projeto</h4>
+            <div class="abas-textos">
+            </div>
     <script src="main.js"></script>
 </body>
 </html>
