--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objetivos<span>_</span></h2>
+    <div class="conteudo">
     <div class="botoes">
         <button class="botao ativo">Cursos na Alura</button>
         <button class="botao ativo">Criar projetos em JavaScript</button>
@@ -16,7 +17,7 @@
         <button class="botao ativo">Atualizar meu curriculo</button>
     </div>
     </section>
-    <div class="abas-textos">
+    <div class="abas-conteudo.ativo">
     <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
     <div class="abas-textos">
@@ -26,6 +27,7 @@
             <h3 class="aba-conteudo-titulo-principal">Criar um portfólio com os meus 3 melhores projetos</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o projeto</h4>
             <div class="abas-textos">
+            </div>
             </div>
     <script src="main.js"></script>
 </body>
